--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <script>
         function checkCode() {
-            const correctCode = "123456";  // Este es el código correcto que debería ingresar el jugador
+            const correctCode = "moss";  // Este es el código correcto que debería ingresar el jugador
             const userCode = document.getElementById("codeInput").value;
 
             if (userCode === correctCode) {
